# covid-train

./: .gitignore  pyproject.toml  server.sh
src/covid/: covid_train_dag.py  covid_train_utils.py  prepare_data_dag.py  prepare_data_utils.py  train.ipynb
tests/: test_covid_train.py
