[tool.poetry]
name = "covid-train"
version = "0.1.0"
description = ""
authors = ["kabinja <renaud.rwemalika@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
tfx = "^1.6.1"
tensorflow-text = "^2.7.0"
tensorflow-decision-forests = "^0.2.0"
struct2tensor = "^0.37.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
